# Landing-Assist-Module-LAM

./: .gitignore  README.md
config/: allFunctionTest.yaml  config.yaml  pipeline.yaml  pipeline1.yaml  pipeline2Octree.yaml  pipeline3.yaml  test.yaml
docker/: Dockerfile_3dmapping
lib/: CMakeLists.txt  README.md  common.h  hazard_metrices.h  main.cpp  pointcloud_preprocessing.h
lib/common/: common.h
lib/config/: allFunctionTest.yaml  pipeline1.yaml  pipeline2Octree.yaml  pipeline2_prosac.yaml  pipeline3.yaml
lib/hazard_metrices/: CMakeLists.txt  hazard_metrices.h  main.cpp  test_hazard_metrices.cpp
lib/include/: architecture.h  common.h  hazard_metrices.h  pointcloud_preprocessing.h
lib/preprocessing/: CMakeLists.txt  main.cpp  pointcloud_preprocessing.h  test_pointcloud_preprocessing.cpp
lib/test/: CMakeLists.txt  test_hazard_metrices.cpp  test_pointcloud_preprocessing.cpp
ros2/src/cpp/: CMakeLists.txt  main.cpp
ros2/src/my_octomap_converter/: CMakeLists.txt
rviz_config/: octomap.rviz
scripts/: custom_pcd_plane_blocks.py  custom_plane.py  laz_to_pcd.py  slice_pcd.py
